<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ProfileActivity">
        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
               app:title=" "
                android:background="@color/primaryColor"
                android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/primaryColor"
                app:layout_constraintTop_toBottomOf="@id/toolbar_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_profile"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/personal_picture"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/secondaryColor"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="@id/background"
                    app:layout_constraintEnd_toEndOf="@id/background"
                    app:layout_constraintTop_toTopOf="@id/background"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/profile_picture"/>
            <TextView
                    android:id="@+id/text_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_name"
                    android:gravity="center"
                    android:textColor="@color/primaryTextColor"
                    app:layout_constraintTop_toBottomOf="@+id/image_profile"
                    app:layout_constraintEnd_toEndOf="@+id/image_profile"
                    app:layout_constraintStart_toStartOf="@+id/image_profile"
                    android:layout_marginTop="4dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="32dp"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                android:background="#F5F5F5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/background"
                android:layout_marginTop="168dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/icon_graduation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_track"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:contentDescription="@string/track_icon"/>
                <TextView
                        android:id="@+id/text_track"
                        android:text="@string/my_track"
                        style="@style/TextStyle"
                        app:layout_constraintTop_toTopOf="@+id/icon_graduation"
                        app:layout_constraintBottom_toBottomOf="@+id/icon_graduation"
                        app:layout_constraintStart_toEndOf="@+id/icon_graduation"/>
                <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/icon_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_flag"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@id/icon_graduation"
                        app:layout_constraintStart_toStartOf="parent"
                        android:contentDescription="@string/country_icon"/>
                <TextView
                        android:id="@+id/text_country"
                        android:text="@string/my_country"
                        style="@style/TextStyle"
                        app:layout_constraintStart_toEndOf="@+id/icon_country"
                        app:layout_constraintBottom_toBottomOf="@+id/icon_country"
                        app:layout_constraintTop_toTopOf="@+id/icon_country"/>
                <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/icon_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_email"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@id/icon_country"
                        app:layout_constraintStart_toStartOf="parent"
                        android:contentDescription="@string/email_icon"/>
                <TextView
                        android:id="@+id/text_email"
                        android:text="@string/my_email"
                        style="@style/TextStyle"
                        app:layout_constraintStart_toEndOf="@+id/icon_email"
                        app:layout_constraintBottom_toBottomOf="@+id/icon_email"
                        app:layout_constraintTop_toTopOf="@+id/icon_email"/>
                <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/icon_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_phone"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@id/icon_email"
                        app:layout_constraintStart_toStartOf="parent"
                        android:contentDescription="@string/phone_icon"/>
                <TextView
                        android:id="@+id/text_phone"
                        android:text="@string/my_phone_number"
                        style="@style/TextStyle"
                        app:layout_constraintStart_toEndOf="@+id/icon_phone"
                        app:layout_constraintBottom_toBottomOf="@+id/icon_phone"
                        app:layout_constraintTop_toTopOf="@+id/icon_phone"/>
                <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/icon_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_slack"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@id/icon_phone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginBottom="16dp"
                        android:contentDescription="@string/slack_icon"/>
                <TextView
                        android:id="@+id/text_user"
                        android:text="@string/slack_name"
                        style="@style/TextStyle"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toEndOf="@+id/icon_user"
                        app:layout_constraintBottom_toBottomOf="@+id/icon_user"
                        app:layout_constraintTop_toTopOf="@+id/icon_user"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>