<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/main_background_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/background_image_main"
            android:tint="@color/tinted_view_color"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/alc_image"/>
    <Button
            android:id="@+id/button_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/my_profile"
            style="@style/ButtonStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_welcome"
            app:layout_constraintBottom_toTopOf="@+id/button_about"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintDimensionRatio="5:1"/>
    <Button
            android:id="@+id/button_about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/about_alc"
            style="@style/ButtonStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_profile"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintDimensionRatio="5:1"/>
    <TextView
            android:id="@+id/text_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_alc_4_0"
            android:textColor="@color/primaryTextColor"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:layout_marginBottom="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button_profile"
            app:layout_constraintVertical_chainStyle="packed"
    />
</androidx.constraintlayout.widget.ConstraintLayout>
